2014-06-20  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Un-encoded garbage handling is available when built-in base64
	decoder is used.

	* mel.el (mel-b-builtin-garbage-strategy): New customizable
	variable.
	(mel-b-builtin-encoded-line-regexp): New variable.
	(mel-b-builtin-decode-string, mel-b-builtin-decode-region): New
	functions.
	(mime-decode-string, mime-decode-region)
	(mime-write-decoded-region): (mel-b-builtin) Use them.

2014-05-31  Juliusz Chroboczek  <jch@pps.univ-paris-diderot.fr>

	* mel.el (mime-insert-encoded-file): Avoid going through an
	intermediary string, work inline.
	(mime-write-decoded-region): likewise.

2014-04-23  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* FLIM-ELS: Check whether secure-hash function is defined.
	Cf. https://github.com/ikazuhiro/flim/commit/85bbe382c4812fd041207aa727acba8ece2e7a39#commitcomment-6082738

	* hmac-md5.el: Likewise.

	* hmac-sha1.el: Likewise.

	* sha1.el (TOP, sha1-dl-module): Likewise.

2014-04-15  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* FLIM-ELS: Install sha1-el.el when dynamic-link is available and
	built-in sha1 library is not available.

2014-04-05  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* std11.el (std11-narrow-to-header)
	(std11-field-bodies): Minor refactoring.

2014-03-30  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* sasl-cram.el: Require hex-util.el.

	* sasl-digest.el: Require hex-util.el.

	* hmac-md5.el: Do not require hex-util.el.  Define autoload for
	decode-hex-string only when needed.
	(md5-binary): Use built-in functionality if available.

	* hmac-sha1.el: Linkewise.
	(sha1-binary): Use built-in functionality if available.

2014-03-29  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* FLIM-ELS: Do not install sha1-el.el when built-in SHA1 library
	is available.

	* sha1.el: Do not require sha1-el.el in the above case.
	(sha1-dl-module): set to nil in the above case.

2014-02-22  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mel-q-ccl.el (quoted-printable-ccl-insert-encoded-file): Call
	insert-file-contents-literally directly.