@@ -1,3 +1,8 @@
+2014-09-08 Erik Hetzner <egh@e6h.org>
+
+	* mime-conf.el (mime-format-mailcap-command): Only quote file name
+	using shell-quote-argument if necessary to avoid double quoting
+
 2014-06-20  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>
 
 	Un-encoded garbage handling is available when built-in base64
